Fixed alignment in news page layout

--- a/src/app/modules/news-feed/pages/news-page/news-page.component.css
+++ b/src/app/modules/news-feed/pages/news-page/news-page.component.css
@@ -8,12 +8,11 @@
     background-position: center;
     background-position-y: 40%;
     padding-top: 1%;
-    padding-left: 2%;
+    padding-left: 1%;
 }
 
 #logo {
     position:relative;
-
     width: 15vw;
 }
 
@@ -23,8 +22,8 @@
 
 .headline {
     color: white;
-    font-size: 42px;
+    font-size: 45px;
     position: relative;
-    padding-left: 7%;
+    padding-left: 3.5%;
     padding-top: 5%;
 }
